--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,10 @@
   @apply translate-x-[23px];
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] { -moz-appearance:textfield; }
