--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -542,7 +542,7 @@ button.fc-button.fc-button-primary.fc-prev-button {
   .item-wrapper
   ul
   li.item:hover {
-  fill: #22c55e;
+  fill: #c52222;
   color: #22c55e;
 }
 :is(.sidebar-wrapper, .sidebar-wrapper-collapse)
@@ -553,7 +553,7 @@ button.fc-button.fc-button-primary.fc-prev-button {
   .item-ico
   svg
   .path-2 {
-  fill: #b7ffd1;
+  fill: #ffb7b7;
 }
 .sidebar-wrapper .sidebar-body .nav-wrapper ul li.item .sub-menu {
   display: none;
@@ -621,8 +621,8 @@ button.fc-button.fc-button-primary.fc-prev-button {
   .item-wrapper
   ul
   li.item:hover {
-  fill: #27da68;
-  color: #27da68;
+  fill: #fff700;
+  color: #fff700;
 }
 :is(.dark .sidebar-wrapper, .dark .sidebar-wrapper-collapse)
   .sidebar-body
@@ -632,11 +632,25 @@ button.fc-button.fc-button-primary.fc-prev-button {
   .item-ico
   svg
   .path-2 {
-  fill: #16a34a;
+  fill: #f2f2f2;
 }
 @media (max-width: 1536px) {
 }
 @media (max-width: 1280px) {
+  .fc .fc-view-harness {
+    width: 100% !important;
+    height: 600px !important;
+  }
+  .layout-wrapper.active .sidebar-wrapper-collapse {
+    left: 0;
+  }
+  .layout-wrapper.active .body-wrapper {
+    margin-left: 0;
+  }
+  .layout-wrapper.active .body-wrapper .header-wrapper {
+    width: calc(100% - 96px);
+    transition: all 0.5s ease-in-out;
+  }
 }
 @media (max-width: 1024px) {
   .fc .fc-view-harness {
@@ -659,9 +673,30 @@ button.fc-button.fc-button-primary.fc-prev-button {
 }
 
 @media (max-width: 640px) {
-  .fc .fc-view-harness {
-    width: 100% !important;
+  /* .fc .fc-view-harness {
+    width: 100% !important; 
     height: 400px !important;
+  } */
+  .layout-wrapper.active .body-wrapper {
+    margin-left: 0;
+  }
+  .layout-wrapper.active .body-wrapper .drawer-btn {
+    opacity: 1;
+  }
+  .layout-wrapper .body-wrapper {
+    margin-left: 0;
+  }
+  .layout-wrapper.active .sidebar-wrapper {
+    left: -308px;
+  }
+  .layout-wrapper .sidebar-wrapper {
+    left: 0;
+  }
+  .layout-wrapper .sidebar-wrapper + .aside-overlay {
+    left: 0;
+  }
+  .layout-wrapper.active .sidebar-wrapper + .aside-overlay {
+    left: -100%;
   }
 }
 @media (max-width: 426px) {
